# GemMod

./: LICENSE  README.md  doc.md  pyproject.toml
algorithm/: algorithm_simulation.py  cat.py  kdtree.py  test_kdtree.py
cat_simulation/: __init__.py  __main__.py  cat.py  constants.py  grid.py  tools.py
examples/: 500_000.patch  border_magic.patch  cfg_500_000.json  cfg_500_000.py  cfg_beautiful.json  cfg_beautiful.py  cfg_border_magic.json  cfg_border_magic.py
src/cat_simulation/: __init__.py  __main__.py  cat.py  constants.py  grid.py  run_config.py  tools.py
src/catsim/: __init__.py  __main__.py  cat.py  config.json  config.py  constants.py  enums.py  grid.py  spawner.py  tools.py
tests/: helper.py  test_distances.py  test_grid.py  test_initialization.py  test_invisible_motion.py  test_move.py
